--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,5 +6,6 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.event.event_type }}
-      - run: echo ${{ github.event.client_payload }}
+      - run: echo $MESSAGE
+        env:
+          MESSAGE: ${{ github.event.client_payload }}
