--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,5 +9,6 @@ jobs:
       - uses: jsdaniell/create-json@1.1.2
         with:
           name: "figma.tokens.json"
-          json: ${{ github.event.client_payload }}
+          json: |
+            ${{ github.event.client_payload }}
       - run: jq figma.tokens.json
