Print the content using cat

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,4 +11,5 @@ jobs:
           name: "figma.tokens.json"
           json: |
             ${{ github.event.client_payload }}
+      - run: cat figma.tokens.json
       - run: jq . figma.tokens.json
